syntax = "proto3";

package GrpcStreaming;

service UserService {

  rpc JoinUserChat (JoinUserRequest) returns (JoinUserReply);
  rpc SendMessageToChatRoom(stream ChatMessage) returns (stream ChatMessage);
}

message JoinUserRequest {
  User user = 1;
}

message JoinUserReply {
  int32 room_id = 1;
}

message User {
  string Id = 1;
  string name = 2;
}

message ChatMessage {
  string user_id = 1;
  string user_name = 2;
  string message = 3;
  int32 room_id = 4;
}